--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,19 +3,18 @@ body {
   align-items: center;
   height: 100vh;
   background-color: var(--Grey-100);
-  border: 1px solid red;
 }
 
 #age-calculator {
   display: grid;
-  gap: 5rem;
+  /* gap: 5rem; */
   justify-content: center;
   align-items: center;
   max-width: 375px;
   /* width: 100%; */
   /* height: 100vh; */
   margin: 0 auto;
-  padding: 2.5rem;
+  padding: 3rem 2.5rem;
   background-color: var(--White);
   /* border: 1px solid blue; */
   border-radius: 2rem;
@@ -54,14 +53,23 @@ body {
   color: var(--Black);
 }
 
+.calculate-divider {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-block: 5rem;
+}
+
 .calculate-divider__line {
   border-color: var(--Grey-100);
 }
 
 .calculate-divider__button {
-  position: absolute;
-  top: 228px;
-  left: 330px;
+  position: relative;
+  /* top: 228px; */
+  top: -25px;
+  /* left: 330px; */
+  align-self: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -70,7 +78,7 @@ body {
   cursor: pointer;
 }
 .calculate-divider__button:hover {
-  background-color: var(--Purple-600);
+  background-color: var(--Black);
 }
 
 .calculate-divider img {
@@ -81,7 +89,8 @@ body {
 .results {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  margin-top: -5rem;
   font: var(--text-lg);
 }
 
@@ -92,4 +101,65 @@ body {
 
 .results__value {
   color: var(--Purple-500);
+}
+
+@media (min-width: 769px) {
+  #age-calculator {
+    width: 769px;
+    max-width: 1024px;
+    padding: 4rem 5rem;
+  }
+
+  /* .date-inputs {
+    display: flex;    
+  } */
+
+  .date-input__label {
+    font-size: clamp(1.2rem, 2vw, 1.6rem);
+  }
+
+  .date-input__field {
+    width: 140px;
+    padding: 2rem;
+    border-radius: 0.7rem;
+    font-size: clamp(1.6rem, 2vw, 2rem);
+    cursor: pointer;
+  }
+
+  .date-input__field:focus-visible {
+    border-color: var(--Purple-500);
+    outline: 1px solid var(--Purple-500);
+  }
+
+  .calculate-divider {
+    display: flex;
+    align-items: center;
+  }
+
+  .calculate-divider__line {
+    /* max-width: 90%; */
+    width: 669px;
+    margin-top: 2rem;
+  }
+
+  .calculate-divider__button {
+    /* right: 25px; */
+    align-self: flex-end;
+    top: -40px;
+    width: 80px;
+    height: 80px;
+  }
+
+  .calculate-divider img {
+    width: 30px;
+  }
+
+  .results {
+    font-size: clamp(4rem, 10vw, 8rem);
+  }
+
+  .results__item {
+    display: flex;
+    gap: 2rem;
+  }
 }
