--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,16 +7,12 @@ body {
 
 #age-calculator {
   display: grid;
-  /* gap: 5rem; */
   justify-content: center;
   align-items: center;
   max-width: 375px;
-  /* width: 100%; */
-  /* height: 100vh; */
   margin: 0 auto;
   padding: 3rem 2.5rem;
   background-color: var(--White);
-  /* border: 1px solid blue; */
   border-radius: 2rem;
   border-bottom-right-radius: 10rem;
   box-shadow: 1px 1px 10px rgba(0,0,0,0.3);
@@ -30,10 +26,10 @@ body {
 .date-input {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
-  align-items: space-evenly;
+  gap: 0.5rem;
   justify-content: space-evenly;
-  /* border: 1px solid red; */
+  align-items: flex-start;
+  flex: 1;
 }
 
 .date-input__label {
@@ -67,24 +63,27 @@ body {
 }
 
 .error-message {
-  /* display: none; */
   visibility: hidden;
   margin-top: 0.5rem;
   font: var(--text-sm);
   color: var(--Red-400);
   min-height: 1.6rem;
+  /* max-width: 8rem; */
+  max-width: 95%;
+  align-items: flex-start;
+  /* border: 1px solid red; */
 }
 
 .error-message.visible {
   visibility: visible;
 }
 
-input.input-error {
-  border: 1px solid var(--Red-400);
+.input-error,
+.input-error:focus {
+  border-color: var(--Red-400);
 }
 
-input.input-error:focus {
-  border: 1px solid var(--Red-400);
+.input-error:focus {
   box-shadow: none;
   outline: none;
 }
@@ -102,9 +101,7 @@ input.input-error:focus {
 
 .calculate-divider__button {
   position: relative;
-  /* top: 228px; */
   top: -25px;
-  /* left: 330px; */
   align-self: center;
   width: 50px;
   height: 50px;
@@ -130,10 +127,10 @@ input.input-error:focus {
   font: var(--text-lg);
 }
 
-.results-item {
+/* .results-item {
   display: flex;
   align-items: center;
-}
+} */
 
 .results__value {
   color: var(--Purple-500);
@@ -145,10 +142,6 @@ input.input-error:focus {
     max-width: 1024px;
     padding: 4rem 5rem;
   }
-
-  /* .date-inputs {
-    display: flex;    
-  } */
 
   .date-input__label {
     font-size: clamp(1.2rem, 2vw, 1.6rem);
@@ -167,18 +160,16 @@ input.input-error:focus {
   }
 
   .calculate-divider {
-    display: flex;
+    /* display: flex; */
     align-items: center;
   }
 
   .calculate-divider__line {
-    /* max-width: 90%; */
     width: 669px;
     margin-top: 2rem;
   }
 
   .calculate-divider__button {
-    /* right: 25px; */
     align-self: flex-end;
     top: -40px;
     width: 80px;
